external/android-tools: init
Change-Id: Ib9c74adbd15870a51efbae5c7d49853dd3ec8ee7

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "external/android-tools"]
+	path = external/android-tools
+	url = https://github.com/nmeum/android-tools.git
 [submodule "external/erofs-utils"]
 	path = external/erofs-utils
 	url = https://github.com/sekaiacg/erofs-utils.git
