external/smali: init
Change-Id: If7b786b31553cd7583119ffaa158231fa589e6a8

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/erofs-utils"]
 	path = external/erofs-utils
 	url = https://github.com/sekaiacg/erofs-utils.git
+[submodule "external/smali"]
+	path = external/smali
+	url = https://github.com/google/smali.git
