external/apktool: init
Change-Id: Ia459793ad18f801b92d1f4a2626568ab4db99964

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "external/android-tools"]
 	path = external/android-tools
 	url = https://github.com/nmeum/android-tools.git
+[submodule "external/apktool"]
+	path = external/apktool
+	url = https://github.com/iBotPeaches/Apktool.git
 [submodule "external/erofs-utils"]
 	path = external/erofs-utils
 	url = https://github.com/sekaiacg/erofs-utils.git
