external/samfirm.js: init
Change-Id: Ic1703d17f3a8cb9e9e71f314ceb586a5a60219d0

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "external/erofs-utils"]
 	path = external/erofs-utils
 	url = https://github.com/sekaiacg/erofs-utils.git
+[submodule "external/samfirm.js"]
+	path = external/samfirm.js
+	url = https://github.com/DavidArsene/samfirm.js.git
 [submodule "external/smali"]
 	path = external/smali
 	url = https://github.com/google/smali.git
