--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,3 +13,21 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+          cache: 'gradle'
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 'latest'
+
+      - name: Build dependencies
+        run: |
+          mkdir -p out/bin
+          cd external
+          ./build.sh
