.gitmodules: ignore changes in submodules
Change-Id: I14f0062cba35db3b0b3df641c4b5c4a9d2197eee

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,20 @@
 [submodule "external/android-tools"]
 	path = external/android-tools
 	url = https://github.com/nmeum/android-tools.git
+	ignore = dirty
 [submodule "external/apktool"]
 	path = external/apktool
 	url = https://github.com/iBotPeaches/Apktool.git
+	ignore = dirty
 [submodule "external/erofs-utils"]
 	path = external/erofs-utils
 	url = https://github.com/sekaiacg/erofs-utils.git
+	ignore = dirty
 [submodule "external/samfirm.js"]
 	path = external/samfirm.js
 	url = https://github.com/DavidArsene/samfirm.js.git
+	ignore = dirty
 [submodule "external/smali"]
 	path = external/smali
 	url = https://github.com/google/smali.git
+	ignore = dirty
