github-actions: external/build.sh>scripts/build_tools.sh
Change-Id: I088d7464299a6f07357d70124d5e72fb5642e309

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,4 @@ jobs:
 
       - name: Build dependencies
         run: |
-          mkdir -p out/bin
-          cd external
-          ./build.sh
+          ./scripts/build_tools.sh
