scripts/build_tools.sh > scripts/build_dependencies.sh
Change-Id: Ie8fbfda2449419e759d77849721d0fe00e7a219c

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
 
       - name: Build dependencies
         run: |
-          ./scripts/build_tools.sh
+          ./scripts/build_dependencies.sh
