--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,9 @@ jobs:
         run: |
           sudo apt update
           DEBIAN_FRONTEND=noninteractive sudo apt install -yq \
-            ccache clang cmake golang libgtest-dev \
-            libprotobuf-dev libunwind-dev libusb-1.0-0-dev lld protobuf-compiler \
-            ninja-build
+            ccache clang cmake f2fs-tools golang \
+            libgtest-dev libprotobuf-dev libunwind-dev libusb-1.0-0-dev lld \
+            protobuf-compiler ninja-build
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
