external/img2sdat: init
Change-Id: I09532f30bf7c0000227b51481742b0352a70bdad

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,10 @@
 	path = external/erofs-utils
 	url = https://github.com/sekaiacg/erofs-utils.git
 	ignore = dirty
+[submodule "external/img2sdat"]
+	path = external/img2sdat
+	url = https://github.com/BlackMesa123/img2sdat.git
+	ignore = dirty
 [submodule "external/samfirm.js"]
 	path = external/samfirm.js
 	url = https://github.com/DavidArsene/samfirm.js.git
