github-actions: add m52xq target
Change-Id: I696e3aa20d9194bda77ddfc32c1076afe9e4d02f

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        target: [a52sxq]
+        target: [a52sxq, m52xq]
 
     steps:
       - name: Checkout repo
