--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text eol=lf
+
+# Git LFS
+unica/patches/vndk/** filter=lfs diff=lfs merge=lfs -text
