a52sxq/m52xq: patches: wpss bind mount
Change-Id: Ib82bbb02337463697aaa6e45086e35b54bb05c46

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text eol=lf
-
 # Git LFS
 unica/patches/vndk/** filter=lfs diff=lfs merge=lfs -text
+target/a52sxq/patches/wpss/firmware/** filter=lfs diff=lfs merge=lfs -text
+target/m52xq/patches/wpss/firmware/** filter=lfs diff=lfs merge=lfs -text
