github-actions: add ROM building
Change-Id: Idabad1ef12b2b64294b2c08ca70960493d4a4652

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,16 @@ jobs:
           node-version: 'latest'
 
       - name: Build dependencies
-        run: |
-          ./scripts/build_dependencies.sh
+        run: ./scripts/build_dependencies.sh
+
+      - name: Generate build config
+        run: source ./buildenv.sh ${{ matrix.target }}
+
+      - name: Download stock firmwares
+        run: run_cmd download_fw
+
+      - name: Extract stock firmwares
+        run: run_cmd extract_fw
 
       - name: Build ROM
-        run: |
-          source ./buildenv.sh ${{ matrix.target }}
+        run: run_cmd make_rom
