github-actions: checkout with lfs
Change-Id: I64243fa4dd5c816b20991d486f077d5692ac0f4d

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
+          lfs: true
           submodules: 'recursive'
 
       - name: Free disk space
