--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,8 @@
 * text eol=lf
 
 # Git LFS
+external/signapk/libconscrypt_openjdk_jni.so filter=lfs diff=lfs merge=lfs -text
+external/signapk/signapk.jar filter=lfs diff=lfs merge=lfs -text
 unica/flashable-zip/updater filter=lfs diff=lfs merge=lfs -text
 unica/patches/vndk/** filter=lfs diff=lfs merge=lfs -text
 target/a52sxq/patches/wpss/firmware/** filter=lfs diff=lfs merge=lfs -text
