--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text eol=lf
 
+# Denote all files that are truly binary and should not be modified.
+unica/flashable-zip/** binary
+
 # Git LFS
 external/signapk/libconscrypt_openjdk_jni.so filter=lfs diff=lfs merge=lfs -text
 external/signapk/signapk.jar filter=lfs diff=lfs merge=lfs -text
