unica: security: import AOSP platform key
Change-Id: I334e7eb6aec98b2f1cd8d98ef58a8f6dd0728794

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 * text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
-unica/flashable-zip/** binary
+unica/security/*.pk8 binary
 
 # Git LFS
 external/signapk/libconscrypt_openjdk_jni.so filter=lfs diff=lfs merge=lfs -text
