--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 out/
 
+# Cert
+unica/security/unica_platform.x509.pem
+unica/security/unica_platform.pk8
+
 #
 # We don't want to ignore the following even if they are dot-files
 #
