--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 
 # Denote all files that are truly binary and should not be modified.
 unica/security/*.pk8 binary
+target/a52sxq/patches/assistant/** binary
+target/m52xq/patches/assistant/** binary
 
 # Git LFS
 external/signapk/libconscrypt_openjdk_jni.so filter=lfs diff=lfs merge=lfs -text
