github-actions: fix up
Change-Id: I1793dd1b6736f5d09d2f21170d1a90aeac1d4de8

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          lfs: true
           submodules: 'recursive'
 
       - name: Free disk space
@@ -29,7 +28,7 @@ jobs:
           DEBIAN_FRONTEND=noninteractive sudo apt install -yq \
             attr ccache clang golang libbrotli-dev \
             libgtest-dev libprotobuf-dev libunwind-dev libusb-1.0-0-dev libzstd-dev \
-            linux-modules-extra-$(uname -r) lld protobuf-compiler ninja-build
+            linux-modules-extra-$(uname -r) lld ninja-build protobuf-compiler zipalign
           sudo modprobe erofs f2fs
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
