github-actions: blobs: update
Change-Id: I6e6244930e8a69f689b3245570969f41b6d5ba06

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -85,4 +85,10 @@ jobs:
         with:
           add-paths: |
             ${{ matrix.path }}
-          title: 'Update ${{ matrix.path }} blobs to $PDA_BUILD'
+          commit-message: '${{ matrix.path }}: update blobs to ${{ env.PDA_BUILD }}'
+          committer: 'github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>'
+          author: 'github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>'
+          branch: '${{ matrix.path }}'
+          delete-branch: true
+          title: 'Update ${{ matrix.path }} blobs to ${{ env.PDA_BUILD }}'
+          body: ''
