--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ unica/packages/knox/none/system/** binary
 unica/packages/knox/sdp/system/** binary
 unica/packages/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
+target/a73xq/patches/wpss/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
 *.apk binary
 *.apex binary
