github-actions: blobs: fix up
Change-Id: I49bac4f1cf704e34bb4a2ddb1432be62b970fbea

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -29,8 +29,8 @@ jobs:
             path: "unica/packages/vndk/31"
           - module: "VNDK 33 apex"
             path: "unica/packages/vndk/33"
-          - module: "(m52xq) Google Assistant fix"
-            path: "target/m52xq/patches/assistant"
+          - module: "(m52xq) OS proprietary blobs"
+            path: "target/m52xq/patches/stock_blobs"
           - module: "(m52xq) /vendor proprietary blobs"
             path: "target/m52xq/patches/vendor"
 
