github-actions: build: add a73xq
Change-Id: I2288749f37056b0c511484b20bf6e8de8535d623

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [a52sxq, m52xq]
+        target: [a52sxq, a73xq, m52xq]
 
     steps:
       - name: Checkout repo
