unica: packages: keymaster: init
Change-Id: I654c80b84b805299750471852f280b1a93553217

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -17,6 +17,8 @@ jobs:
             path: "unica/packages/china"
           - module: "Optical FOD blobs"
             path: "unica/packages/fod"
+          - module: "Legacy KeyMaster libs"
+            path: "unica/packages/keymaster"
           - module: "Knox'nt blobs"
             path: "unica/packages/knox/none"
           - module: "Knox SDP blobs"
