docs/_config.yml: burp
Change-Id: I2e9a44bb1bb758fbb74d93ba5ac83e37f9daf481

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: UN1CA
-description: Unofficial One UI libraries and apps for Android.
+description: Work-in-progress custom firmware for Samsung Galaxy devices.
 url: "https://unica.mesalabs.io"
 permalink: pretty
 # Set theme
