docs/index.md: init
Change-Id: I98f3eec12b829e547b2a1440a6dcadbcbd1f7e38

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,6 +9,6 @@ color_scheme: dark
 # Favicon
 favicon_ico: "/assets/images/favicon.ico"
 # Logo
-logo: "/assets/images/logo.png"
+logo: "/assets/images/header.png"
 # Disable heading anchor links
 heading_anchors: false
