docs: update config, custom theme
Change-Id: I1b2a0dbe6c46e54226fc6a5a3def8cb490d48e4c

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,14 +1,39 @@
+# Site settings
 title: UN1CA
 description: Work-in-progress custom firmware for Samsung Galaxy devices.
 url: "https://unica.mesalabs.io"
+repository: BlackMesa123/UN1CA
+
 permalink: pretty
+
 # Set theme
 remote_theme: just-the-docs/just-the-docs
-# Set color scheme
-color_scheme: dark
 # Favicon
 favicon_ico: "/assets/images/favicon.ico"
-# Logo
+
+# Set color scheme
+color_scheme: unica
+
+# Set a path/url to a logo that will be displayed instead of the title
 logo: "/assets/images/header.png"
-# Disable heading anchor links
+
+search:
+  # Display the relative url in search results
+  rel_url: false
+  # Enable or disable the search button that appears in the bottom right corner of every page
+  button: true
+
+# Enable or disable heading anchors
 heading_anchors: false
+
+# Aux links for the upper right navigation
+aux_links:
+  "GitHub":
+    - "https://github.com/BlackMesa123/UN1CA"
+
+# Footer content
+# appears at the bottom of every page's main content
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
