--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,10 @@ name: Build
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
+    branches:
+      - 'fourteen'
     paths-ignore:
       - 'docs/**'
 
