--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -15,8 +15,10 @@ jobs:
         include:
           - module: "Samsung China apps"
             path: "unica/packages/china"
-          - module: "Optical FOD blobs"
-            path: "unica/packages/fod"
+          - module: "(Exynos) Optical FOD blobs"
+            path: "unica/packages/fod/essi"
+          - module: "(Qualcomm) Optical FOD blobs"
+            path: "unica/packages/fod/qssi"
           - module: "Knox'nt blobs"
             path: "unica/packages/knox/none"
           - module: "Knox SDP blobs"
