github-actions: blobs: update
Change-Id: I49e5c00a6d4ba1a68b892940c6b7dd67acc3c6c1

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -19,10 +19,10 @@ jobs:
             path: "unica/packages/fod/essi"
           - module: "(Qualcomm) Optical FOD blobs"
             path: "unica/packages/fod/qssi"
-          - module: "Knox'nt blobs"
-            path: "unica/packages/knox/none"
-          - module: "Knox SDP blobs"
-            path: "unica/packages/knox/sdp"
+          - module: "(Qualcomm) Knox'nt blobs"
+            path: "unica/packages/knox/qssi/none"
+          - module: "(Qualcomm) Knox SDP blobs"
+            path: "unica/packages/knox/qssi/sdp"
           - module: "Low-end Samsung Camera app"
             path: "unica/packages/mass_cam"
           - module: "VNDK 30 apex"
