unica: packages: knox: add essi none patch
Change-Id: I95f9e54fb5eaa5216219ce9df6c4500eb97d3bd0

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -19,6 +19,8 @@ jobs:
             path: "unica/packages/fod/essi"
           - module: "(Qualcomm) Optical FOD blobs"
             path: "unica/packages/fod/qssi"
+          - module: "(Exynos) Knox'nt blobs"
+            path: "unica/packages/knox/essi/none"
           - module: "(Qualcomm) Knox'nt blobs"
             path: "unica/packages/knox/qssi/none"
           - module: "(Qualcomm) Knox SDP blobs"
