--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 unica/flashable-zip/updater binary
 unica/packages/fod/essi/system/** binary
 unica/packages/fod/qssi/system/** binary
+unica/packages/knox/essi/none/system/** binary
 unica/packages/knox/qssi/none/system/** binary
 unica/packages/knox/qssi/sdp/system/** binary
 unica/packages/vndk/30/** binary
