a54x: patches: tee: init
Change-Id: Iaeee8524e064afe127f60733060895ff17902904

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ unica/packages/knox/qssi/none/system/** binary
 unica/packages/knox/qssi/sdp/system/** binary
 unica/packages/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
+target/a54x/patches/tee/vendor/tee/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
 *.apk binary
