--- a/.gitattributes
+++ b/.gitattributes
@@ -10,11 +10,12 @@ unica/packages/knox/qssi/none/system/** binary
 unica/packages/knox/qssi/sdp/system/** binary
 unica/packages/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
-target/a54x/patches/tee/vendor/tee/** binary
+target/a54x/patches/vendor/vendor/tee/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
 *.apk binary
 *.apex binary
+*.bin binary
 *.so binary
 *.jar binary
 *.pk8 binary
