--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -34,7 +34,7 @@ jobs:
           - module: "VNDK 33 apex"
             path: "unica/packages/vndk/33"
           - module: "(a54x) /vendor proprietary blobs"
-            path: "target/a54x/patches/tee"
+            path: "target/a54x/patches/vendor"
           - module: "(m52xq) OS proprietary blobs"
             path: "target/m52xq/patches/stock_blobs"
           - module: "(m52xq) /vendor proprietary blobs"
