unica: packages: knox: add essi sdp patch
Change-Id: I3cef14ccfe6564b4c5a80ca931a0797eb532b46b

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@ unica/flashable-zip/updater binary
 unica/packages/fod/essi/system/** binary
 unica/packages/fod/qssi/system/** binary
 unica/packages/knox/essi/none/system/** binary
+unica/packages/knox/essi/sdp/system/** binary
 unica/packages/knox/qssi/none/system/** binary
 unica/packages/knox/qssi/sdp/system/** binary
 unica/packages/vndk/30/** binary
