Add Galaxy A71 (a71) support (#51)
* a71: init

Change-Id: If4e433a6be3abf4512ea9db26f4015258fc30ba0

* a71: patches: adb: init

Change-Id: I9d0348f0d747c08aadf2477e6ea27eba9c210ce7

* a71: patches: selinux: init

Change-Id: I44132535a732cc71246b42b7db91b323be71fb7e

* a71: patches: miscs: init

Change-Id: Ie0e18d5062e6408ac6500def78bb1a54499408c2

* a71: overlay: add rounded corners value

Change-Id: I73bcecb89e5faad626c03df4589bef24fe32186f

* a71: overlay: add power button location

Change-Id: I0b7e10411a2d7b7684c684bf9d1faaf0b2e8baa8

* a71: patches: miscs: minor adjustments

Change-Id: I09b8249efa9e68be6a6ca84966e930273e5d929f

* a71: floating_feature: init

Change-Id: Ifa330931d2590923485f9f5056add1535dd108ae

* a71: floating_feature: Add Voice Focus, Allow remaster picture on any photo

Change-Id: I2f9747f0a1ed3453a6b7741ca52efa1a07770c4f

* a71: patches: spf: init

Change-Id: I2b0d90a2ebf05105134c78831c62fe76a1b8cc1b

* a71: patches: miscs: fix face biometrics

Change-Id: I664993be5656e73076728c2328ebf9c4863d9bea

* docs: devices: a71: init

Change-Id: Ib1db7ea1a816c69d83189a3f618aeec36e4afe02

* docs: devices: a71: burp

Change-Id: I56eba71ef4efa1618019213c367e0bed38624e57

* a71: patches: camera: init

Change-Id: Iead7f02fc3910d18535ed7c9f2a5f3b150099667

* a71: patches: stock_blobs: init

Change-Id: I3a397508220bd32b72d4762c7efe7ee7b24d45f5

* a71: debloat: init

Change-Id: I811fcb1a78be980a32e6c8785efdfc998b98d72a

* a71: patches: stock_blobs: add tlc libs

Change-Id: I0ef99672044b85c15045278fe876ce433f8b020d

* a71: disable TARGET_INCLUDE_MAGISK

Change-Id: Ia84a9dcf8947470ff45f3ae598c22ae6b61f24cd

* a71: floating_feature: disable native blur

Change-Id: I44e4226435f810c777abd4215883f658086ce6d0

* a71: patches: stock_blobs: add stock WFD blobs

Change-Id: If259e6c61d2a0e5c3266e03f66fdcba46656741f

* a71: patches: stock_blobs: fix Smart View

Change-Id: Iad20c18f147cb306b

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@ unica/packages/knox/qssi/sdp/system/** binary
 unica/packages/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
 target/a54x/patches/vendor/vendor/tee/** binary
+target/a71/patches/stock_blobs/vendor/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
 *.apk binary
