--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ unica/packages/knox/essi/sdp/system/** binary
 unica/packages/knox/qssi/none/system/** binary
 unica/packages/knox/qssi/sdp/system/** binary
 unica/packages/vndk/30/** binary
+unica/patches/mods/system/bin/resetprop binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
 target/a54x/patches/vendor/vendor/tee/** binary
 target/a71/patches/stock_blobs/vendor/** binary
