unica: packages: knox: add qssi DDAR/SDP patch
Change-Id: I32931cbce1c40abe18079d66bfea53be4d177cc7

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -23,6 +23,8 @@ jobs:
             path: "unica/packages/knox/essi/none"
           - module: "(Exynos) Knox SDP blobs"
             path: "unica/packages/knox/essi/sdp"
+          - module: "(Qualcomm) Knox DDAR/SDP blobs"
+            path: "unica/packages/knox/qssi/ddar_sdp"
           - module: "(Qualcomm) Knox'nt blobs"
             path: "unica/packages/knox/qssi/none"
           - module: "(Qualcomm) Knox SDP blobs"
