github-actions: build: add r9q
Change-Id: Iea5d9068c3a908f44689702a84cce4229d5ccfd0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [a52q, a52sxq, a54x, a71, a73xq, m52xq]
+        target: [a52q, a52sxq, a54x, a71, a73xq, m52xq, r9q]
 
     steps:
       - name: Checkout repo
