--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -56,6 +56,8 @@ jobs:
 
       - name: Free disk space
         uses: rokibhasansagar/slimhub_actions@main
+        with:
+          retain: 'compiler_cmake'
 
       - name: Set up build environment
         run: |
@@ -69,9 +71,6 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           echo -n "${{ secrets.PLATFORM_KEY_PK8 }}" | base64 --decode > unica/security/unica_platform.pk8
           echo -n "${{ secrets.PLATFORM_KEY_PEM }}" | base64 --decode > unica/security/unica_platform.x509.pem
-
-      - name: Set up CMake
-        uses: jwlawson/actions-setup-cmake@v1.14
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
