Revert "scripts/build_dependencies.sh: remove baksmali/smali tools"
This reverts commit 4731196f36bfcd3b237dc55af34579da35f8e0e9.

Change-Id: I83df8cd227ceb321b9659cf9388e3c44eb713664

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = external/samfirm.js
 	url = https://github.com/DavidArsene/samfirm.js.git
 	ignore = dirty
+[submodule "external/smali"]
+	path = external/smali
+	url = https://github.com/google/smali.git
+	ignore = dirty
