--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,8 @@
 
 # Denote all files that are truly binary and should not be modified.
 unica/flashable-zip/updater binary
+unica/packages/deknox/system/** binary
 unica/packages/fod/system/** binary
-unica/packages/knox/*/system/** binary
 unica/packages/vndk/30/** binary
 unica/patches/mods/system/bin/rezetprop binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
