--- a/.gitattributes
+++ b/.gitattributes
@@ -3,10 +3,10 @@
 
 # Denote all files that are truly binary and should not be modified.
 unica/flashable-zip/updater binary
-unica/packages/deknox/system/** binary
-unica/packages/fod/system/** binary
-unica/packages/vndk/30/** binary
-unica/patches/mods/system/bin/rezetprop binary
+unica/mods/mods/system/bin/rezetprop binary
+unica/patches/deknox/system/** binary
+unica/patches/fod/system/** binary
+unica/patches/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
 target/a71/patches/*/*/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
