--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -19,8 +19,26 @@ jobs:
             path: "unica/patches/mass_cam"
           - module: "Non-eSE blobs"
             path: "unica/patches/nfc"
+          - module: "Optical FOD blobs"
+            path: "unica/patches/product_feature/fingerprint/optical_fod"
+          - module: "Side fingerprint sensor blobs"
+            path: "unica/patches/product_feature/fingerprint/side_fp"
           - module: "VNDK 30 apex"
             path: "unica/patches/vndk/30"
+          - module: "VNDK 31 apex"
+            path: "unica/patches/vndk/31"
+          - module: "VNDK 32 apex"
+            path: "unica/patches/vndk/32"
+          - module: "VNDK 33 apex"
+            path: "unica/patches/vndk/33"
+          - module: "Samsung China apps"
+            path: "unica/mods/china"
+          - module: "(a71) OS proprietary blobs"
+            path: "target/a71/patches/stock_blobs"
+          - module: "(m52xq) OS proprietary blobs"
+            path: "target/m52xq/patches/stock_blobs"
+          - module: "(m52xq) /vendor proprietary blobs"
+            path: "target/m52xq/patches/vendor"
 
     steps:
       - name: Checkout repo
