--- a/.gitattributes
+++ b/.gitattributes
@@ -29,3 +29,4 @@ target/a52sxq/patches/wpss/vendor/firmware/** binary
 target/a71/patches/*/*/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
+target/r8q/patches/vendor/*/** binary
